Update Java_New_Features_Guide.md